--- a/template.html
+++ b/template.html
@@ -16,11 +16,10 @@
 </head>
 <body>
 
-  <script src="js/jquery.min.js"></script>
-  <script src="js/jquery.easing.min.js"></script>
+ <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+  	<script src="js/jquery.easing.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/wow.js"></script>
 	<script src="js/custom.js"></script>
-	<script src="contactform/contactform.js"></script>
 </body>
 </html>
