--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Bootstrap 4 Template</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
 	<link rel="stylesheet" type="text/css" href="css/animate.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
@@ -262,8 +261,9 @@
 		</div>
 	</div>
 </footer>
-	<script src="js/jquery.min.js"></script>
-    <script src="js/jquery.easing.min.js"></script>
+	
+   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+  	<script src="js/jquery.easing.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/wow.js"></script>
 	<script src="js/custom.js"></script>
